# proxy-wasm-rust-sdk

./: .bazelrc  .bazelversion  .gitignore  BUILD  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  MODULE.bazel  README.md  WORKSPACE  build.rs  cfg_if.BUILD  log.BUILD
.bcr/: README.md  metadata.template.json  presubmit.yml  source.template.json
.github/: dependabot.yml  pull.yml
.github/workflows/: publish-to-bcr.yml  rust.yml  update.yml
bazel/: dependencies.bzl  dependencies_bazel.bzl  dependencies_compat.bzl  dependencies_crates.bzl  extensions.bzl  repositories.bzl  rules_rust.patch
bazel/cargo/: BUILD  BUILD.bazel  crates.bzl
bazel/cargo/remote/: BUILD.ahash-0.4.6.bazel  BUILD.ahash-0.4.7.bazel  BUILD.ahash-0.7.2.bazel  BUILD.ahash-0.7.4.bazel  BUILD.ahash-0.7.6.bazel  BUILD.ahash-0.8.2.bazel  BUILD.ahash-0.8.3.bazel  BUILD.allocator-api2-0.2.14.bazel  BUILD.allocator-api2-0.2.21.bazel  BUILD.autocfg-1.0.1.bazel  BUILD.autocfg-1.1.0.bazel  BUILD.bazel  BUILD.bitflags-1.2.1.bazel  BUILD.bytes-1.10.1.bazel  BUILD.bytes-1.11.0.bazel  BUILD.bytes-1.11.1.bazel  BUILD.bytes-1.12.0.bazel  BUILD.bytes-1.8.0.bazel  BUILD.cfg-if-0.1.10.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.chrono-0.4.19.bazel  BUILD.either-1.6.1.bazel  BUILD.equivalent-1.0.1.bazel  BUILD.equivalent-1.0.2.bazel  BUILD.fnv-1.0.7.bazel  BUILD.foldhash-0.1.3.bazel  BUILD.foldhash-0.1.4.bazel  BUILD.foldhash-0.1.5.bazel  BUILD.foldhash-0.2.0.bazel  BUILD.getrandom-0.2.0.bazel  BUILD.getrandom-0.2.2.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.getrandom-0.2.4.bazel  BUILD.getrandom-0.2.6.bazel  BUILD.hashbrown-0.11.0.bazel  BUILD.hashbrown-0.11.1.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.hashbrown-0.12.0.bazel  BUILD.hashbrown-0.13.1.bazel  BUILD.hashbrown-0.14.0.bazel  (+114 more)
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/remote/: ahash-0.3.8.BUILD  cfg-if-0.1.10.BUILD  chrono-0.4.15.BUILD  hashbrown-0.7.2.BUILD  hashbrown-0.8.2.BUILD  log-0.4.0.BUILD  log-0.4.11.BUILD  time-0.1.43.BUILD  winapi-0.3.9.BUILD  winapi-i686-pc-windows-gnu-0.4.0.BUILD
examples/: BUILD  README.md  docker-compose.yaml  hello_world.rs  http_auth_random.rs  http_body.rs  http_config.rs  http_headers.rs  http_metrics.rs
examples/envoy_filter_metadata/: Cargo.toml  README.md  docker-compose.yaml
examples/envoy_filter_metadata/src/: lib.rs
examples/envoy_tcp_routing/: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml  envoy.yaml
examples/envoy_tcp_routing/envoy/: envoy.yaml
examples/envoy_tcp_routing/src/: lib.rs  set_envoy_filter_state.proto
examples/filter_metadata/: Cargo.toml  README.md  envoy.yaml
examples/filter_metadata/src/: lib.rs
examples/grpc_auth_random/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
examples/grpc_auth_random/src/: lib.rs
examples/grpc_call/: helloworld.rs  main.rs
examples/hello_world/: Cargo.toml  docker-compose.yaml  envoy.yaml
examples/hello_world/src/: lib.rs
examples/http_auth_random/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
examples/http_auth_random/src/: lib.rs
examples/http_body/: Cargo.toml  envoy.yaml
examples/http_body/src/: lib.rs
examples/http_config/: Cargo.toml  envoy.yaml
examples/http_config/src/: lib.rs
examples/http_dispatch_timeout/: Cargo.toml  README.md  envoy-timeout.yaml
examples/http_dispatch_timeout/src/: lib.rs
examples/http_headers/: Cargo.toml  envoy-local.yaml  envoy.yaml
examples/http_headers/src/: lib.rs
examples/http_headers_retry/: README.md  envoy-retry.yaml
examples/http_headers_retry/src/: lib.rs
examples/http_parallel_call/: Cargo.toml  README.md  envoy.yaml
examples/http_parallel_call/src/: lib.rs
examples/metrics/: Cargo.toml  README.md  docker-compose.yaml  envoy.yaml
examples/metrics/src/: lib.rs
examples/tcp_rerouting/: Cargo.toml  README.md  build.rs  docker-compose.yaml
examples/tcp_rerouting/envoy/: envoy.yaml
examples/tcp_rerouting/src/: lib.rs  set_envoy_filter_state.proto
src/: allocator.rs  dispatcher.rs  hostcalls.rs  lib.rs  logger.rs  promise.rs  stats.rs  traits.rs  types.rs
src/callout/: http.rs  mod.rs  promise.rs
