[package]
name = "proxy-wasm"
version = "0.2.0"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
description = "WebAssembly for Proxies"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk"
edition = "2018"
build = "build.rs"

[features]
wee-alloc = ["wee_alloc"]

[dependencies]
hashbrown = "0.12"
log = "0.4"
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dev-dependencies]
getrandom = "0.2"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[package.metadata.raze]
package_aliases_dir = "bazel/cargo"
workspace_path = "//bazel/cargo"
genmode = "Remote"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
crate-type = ["cdylib"]

[[example]]
name = "http_auth_random"
path = "examples/http_auth_random.rs"
crate-type = ["cdylib"]

[[example]]
name = "http_headers"
path = "examples/http_headers.rs"
crate-type = ["cdylib"]

[[example]]
name = "http_body"
path = "examples/http_body.rs"
crate-type = ["cdylib"]

[[example]]
name = "http_config"
path = "examples/http_config.rs"
crate-type = ["cdylib"]
