[package]
name = "proxy-wasm"
version = "0.2.0"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
description = "WebAssembly for Proxies"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk"
edition = "2018"
build = "build.rs"

[features]
wee-alloc = ["wee_alloc"]

[dependencies]
hashbrown = "0.12"
log = "0.4"
wee_alloc = { version = "0.4", optional = true }

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[package.metadata.raze]
package_aliases_dir = "bazel/cargo"
workspace_path = "//bazel/cargo"
genmode = "Remote"
