# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "proxy-wasm"
version = "0.2.5-dev"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
rust-version = "1.68"
description = "WebAssembly for Proxies"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk"
edition = "2018"
build = "build.rs"

[dependencies]
hashbrown = "0.16"
log = "0.4"
mockalloc = { version = "0.1", optional = true }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.test]
inherits = "release"
debug = true

[profile.bench]
inherits = "release"
debug = true
