# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "proxy-wasm-rust-sdk",
    version = "0.2.4",
    repo_name = "proxy_wasm_rust_sdk",
)

# Regular dependencies (sorted alphabetically).
bazel_dep(name = "bazel_features", version = "1.38.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_rust", version = "0.68.1")
single_version_override(
    module_name = "rules_rust",
    patch_strip = 1,
    patches = [
        "//bazel:rules_rust.patch",
    ],
    version = "0.68.1",
)

# Configure Rust toolchain.
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2018",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    # Dummy C/C++ toolchains for Wasm targets.
    "@rules_rust//rust/private/dummy_cc_toolchain:dummy_cc_wasm32_toolchain",
    "@rules_rust//rust/private/dummy_cc_toolchain:dummy_cc_wasm64_toolchain",
)

# Cargo dependencies.
crates_deps = use_extension("//bazel:extensions.bzl", "crates_deps")
use_repo(
    crates_deps,
    "crates_vendor",
    "crates_vendor__hashbrown-0.16.0",
    "crates_vendor__log-0.4.27",
)
