[package]
name = "proxy-wasm"
version = "0.1.0"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
description = "WebAssembly for Proxies"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/proxy-wasm/proxy-wasm-rust-sdk"
edition = "2018"

[raze]
workspace_path = "//cargo"
target = "wasm32-unknown-unknown"
genmode = "Remote"

[dependencies]
hashbrown = { version = "0.7", default-features = false, features = ["ahash", "inline-more"] }
log = "0.4.0"
wee_alloc = "0.4"

[dev-dependencies]
chrono = "0.4"

[profile.release]
lto = true
opt-level = 3
panic = "abort"