[package]
publish = false
name = "proxy-wasm-example-http-config"
version = "0.0.1"
authors = ["Piotr Sikora <piotrsikora@google.com>"]
description = "Proxy-Wasm plugin example: HTTP config"
license = "Apache-2.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = { path = "../../" }
