[package]
publish = false
name = "proxy-wasm-example-tcp-rerouting"
version = "0.0.1"
authors = ["Proxy-Wasm contributors"]
description = "Proxy-Wasm plugin example: TCP Rerouting based on source IP"
license = "Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
proxy-wasm = { path = "../../" }
prost = "0.12"

[build-dependencies]
prost-build = "0.12"
